# qlippy

./: .gitignore  README.MD
doc/: qlippy-options-slider-spec.md  qlippy-phase0.md  qlippy-phase1-repo.md  qlippy-phase2-runtime.md  qlippy-phase3-ipc.md  qlippy-phase4-storage.md  qlippy-phase5-wayland.md  qlippy-phase6-daemon.md  qlippy-phase7-ui.md  qlippy-phase8-cli-settings.md  qlippy-phase9-ops-v2.md
qlippy/: CMakeLists.txt  build.sh
qlippy/cmake/: WaylandScanner.cmake
qlippy/docs/: qlippy.service
qlippy/qml/: ClipCompactView.qml  ClipItemDelegate.qml  ClipboardWindow.qml  ItemDelegate.qml  OptionsSlider.qml  Popup.qml  Preview.qml  SearchBox.qml  qlippy.qrc
qlippy/src/: CMakeLists.txt
qlippy/src/app/: CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  main.cpp
qlippy/src/common/: CMakeLists.txt  Logger.cpp  Logger.h
qlippy/src/ipc/: CMakeLists.txt  IpcClient.cpp  IpcClient.h  IpcMessage.cpp  IpcMessage.h  IpcServer.cpp  IpcServer.h  JsonCodec.cpp  JsonCodec.h
qlippy/src/platform/: CMakeLists.txt  ClipboardWriter.cpp  ClipboardWriter.h  WaylandClipboardMonitor.cpp  WaylandClipboardMonitor.h  WaylandConnection.cpp  WaylandConnection.h  WaylandRegistry.cpp  WaylandRegistry.h
qlippy/src/storage/: CMakeLists.txt  HistoryRepository.cpp  HistoryRepository.h  Item.h  Settings.cpp  Settings.h  Storage.cpp  Storage.h
qlippy/src/ui/: CMakeLists.txt  ClipboardModel.cpp  ClipboardModel.h  PopupController.cpp  PopupController.h  SettingsModel.cpp  SettingsModel.h
qlippy/tests/: CMakeLists.txt
qlippy/tests/cli/: CMakeLists.txt  CliCommandTests.cpp
